package uqam.team17.modificationsarchiveservice.model;

public enum ModificationType {
    CONTACT_INFORMATION,
    MEDICAL_HISTORY,
    MEDICAL_VISIT
}
